Small fixes
Scrollbar for mboile collapse after click,
navbar click will make the right elements active
jquery effect on tour start
text correction

--- a/client/css/stylesheet.css
+++ b/client/css/stylesheet.css
@@ -137,6 +137,7 @@ img.awardThumb{
 }
 .picAndDesc{
  display:inline-flex;
+position: relative;
 }
 img.thumbnail {
   display: block;
